tests/grammars/reject/undefined-field.aug
grammar {
  token EOL '\n'

  start: $4 EOL
}
